--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
   "author": "MalekD5",
   "license": "MIT",
   "dependencies": {
-    "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
@@ -23,9 +22,11 @@
     "mongoose": "^6.6.5"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.3",
     "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
